--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <!DOCTYPE html>
-<meta http-equiv="refresh" content="0; https://andreiipaul.github.io/practica3css/practica3css/WebContent/index.html">
-
+<head>
+  <meta http-equiv="refresh" content="0; https://andreiipaul.github.io/practica3css/practica3css/WebContent/index.html">
+</head>
 
 
 
